src/test/resources/nox/errors/err_main_struct_missing_field.nox
// @test:arg point {"x": 10}
// @test:error TypeError

type Point { int x; int y; }

main(Point point) {
    return point.x.toString();
}